--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,7 @@
 </IfModule>
 # php -- END cPanel-generated handler, do not edit
 
-ErrorDocument 404 jkgalaxies.futuza.net/404.shtml
+ErrorDocument 404 /404.shtml
 ErrorDocument 403 /403.shtml
 
 #Redirects, uncomment on site launch.
